--- a/content/resources/24-01s06-th.md
+++ b/content/resources/24-01s06-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Rene Descartes.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 24-01s06-th.jpg
 uid: a3136b0a-8d7a-66f7-c23f-4525f9d2e409
 ---
 New image Upload
-
