--- a/content/resources/24-01s06.md
+++ b/content/resources/24-01s06.md
@@ -12,10 +12,10 @@ image_metadata:
   credit: ''
   image-alt: Rene Descartes.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 24-01s06.jpg
 uid: 7b47100d-808d-0d79-acb6-c65ef7bda319
 ---
 Ren? Descartes, 1596-1650. Engraving by W. Holl after painting by Franz Hals. (Image courtesy of the Library of Congress, Prints and Photographs Division [reproduction number: LC-USZ62-61365 (b&w film copy neg.)].)
-
