Sync all content

--- a/content/resources/24-01s06-th.md
+++ b/content/resources/24-01s06-th.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: New image Upload
-file: /courses/24-01-classics-in-western-philosophy-spring-2006/a3136b0a8d7a66f7c23f4525f9d2e409_24-01s06-th.jpg
+file: /ol-ocw-studio-app/courses/24-01-classics-in-western-philosophy-spring-2006/a3136b0a8d7a66f7c23f4525f9d2e409_24-01s06-th.jpg
+file_size: 5990
 file_type: image/jpeg
 image_metadata:
   caption: "Ren\xE9 Descartes, 1596-1650. Engraving by W. Holl after painting by Franz\
