--- a/content/resources/24-01s06.md
+++ b/content/resources/24-01s06.md
@@ -3,7 +3,8 @@ content_type: resource
 description: 'Ren? Descartes, 1596-1650. Engraving by W. Holl after painting by Franz
   Hals. (Image courtesy of the Library of Congress, Prints and Photographs Division
   [reproduction number: LC-USZ62-61365 (b&w film copy neg.)].)'
-file: /courses/24-01-classics-in-western-philosophy-spring-2006/7b47100d808d0d79acb6c65ef7bda319_24-01s06.jpg
+file: /ol-ocw-studio-app/courses/24-01-classics-in-western-philosophy-spring-2006/7b47100d808d0d79acb6c65ef7bda319_24-01s06.jpg
+file_size: 58614
 file_type: image/jpeg
 image_metadata:
   caption: "Ren\xE9 Descartes, 1596-1650. Engraving by W. Holl after painting by Franz\
