Sync all content

--- a/content/resources/24-01s06.md
+++ b/content/resources/24-01s06.md
@@ -8,8 +8,9 @@ file_size: 58614
 file_type: image/jpeg
 image_metadata:
   caption: "Ren\xE9 Descartes, 1596-1650. Engraving by W. Holl after painting by Franz\
-    \ Hals.\_(Image courtesy of the [Library of Congress, Prints and Photographs Division](http://www.loc.gov/rr/print/)\
-    \ \\[reproduction number: LC-USZ62-61365 (b&w film copy neg.)\\].)"
+    \ Hals.\_(Image courtesy of the {{% resource_link \"258d1d39-6d75-493c-b939-96c4a1742276\"\
+    \ \"Library of Congress, Prints and Photographs Division\" %}} \\[reproduction\
+    \ number: LC-USZ62-61365 (b&w film copy neg.)\\].)"
   credit: ''
   image-alt: Rene Descartes.
 learning_resource_types: []
